force-app/main/default/objects/Case_Spam_Mapping__mdt/Case_Spam_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Case Spam Mapping</label>
    <pluralLabel>Case Spam Mappings</pluralLabel>
</CustomObject>