force-app/main/default/objects/Case_Spam_Mapping__mdt/fields/CaseSubType__c.field-meta.xml
<CustomField>
    <fullName>CaseSubType__c</fullName>
    <label>CaseSubType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PO</fullName>
                <default>true</default>
                <label>PO</label>
            </value>
            <value>
                <fullName>Remittance</fullName>
            </value>
            <value>
                <fullName>Junk Mail</fullName>
            </value>
            <value>
                <fullName>Auto Reply</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>