force-app/main/default/objects/Case_Spam_Mapping__mdt/fields/CaseType__c.field-meta.xml
<CustomField>
    <fullName>CaseType__c</fullName>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>System Issues/Notices</fullName>
                <default>true</default>
                <label>System Issues/Notices</label>
            </value>
            <value>
                <fullName>Remittance</fullName>
            </value>
            <value>
                <fullName>Spam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>