force-app/main/default/objects/Case_Spam_Mapping__mdt/fields/Corrective_Action__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Action__c</fullName>
    <label>Corrective Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corrected Data &amp; QC</fullName>
                <default>true</default>
                <label>Corrected Data &amp; QC</label>
            </value>
            <value>
                <fullName>Created Enhancement Request</fullName>
            </value>
            <value>
                <fullName>Created Helpdesk Ticket</fullName>
            </value>
            <value>
                <fullName>Governance/auditing</fullName>
            </value>
            <value>
                <fullName>Implemented revised process</fullName>
            </value>
            <value>
                <fullName>No Action</fullName>
            </value>
            <value>
                <fullName>Training / Coaching</fullName>
            </value>
            <value>
                <fullName>Workaround</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>