force-app/main/default/objects/Case_Spam_Mapping__mdt/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <inlineHelpText>Not referenced in the code any longer.</inlineHelpText>
    <label>(Do Not Use) Department</label>
    <length>100</length>
    <type>Text</type>
</CustomField>