force-app/main/default/objects/Case_Spam_Mapping__mdt/fields/Keywords__c.field-meta.xml
<CustomField>
    <fullName>Keywords__c</fullName>
    <description>Comma separated list of keywords to search for spam when email to case records arrive</description>
    <inlineHelpText>Comma separated list of keywords to search for spam when email to case records arrive</inlineHelpText>
    <label>Keywords</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>