force-app/main/default/objects/Case_Spam_Mapping__mdt/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <label>Root Cause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Error</fullName>
            </value>
            <value>
                <fullName>Data Quality</fullName>
            </value>
            <value>
                <fullName>Known/Standard error</fullName>
            </value>
            <value>
                <fullName>No Issue</fullName>
            </value>
            <value>
                <fullName>Process Issue</fullName>
            </value>
            <value>
                <fullName>Remittance</fullName>
            </value>
            <value>
                <fullName>RWS/MSTS Human Error</fullName>
            </value>
            <value>
                <fullName>Spam</fullName>
            </value>
            <value>
                <fullName>System Issue</fullName>
            </value>
            <value>
                <fullName>Training Issue</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Account # incorrect</fullName>
                <isActive>false</isActive>
                <label>Account # incorrect</label>
            </value>
            <value>
                <fullName>Ariba Issue</fullName>
                <isActive>false</isActive>
                <label>Ariba Issue</label>
            </value>
            <value>
                <fullName>Blanket PO Reference</fullName>
                <isActive>false</isActive>
                <label>Blanket PO Reference</label>
            </value>
            <value>
                <fullName>Buyers name missing</fullName>
                <isActive>false</isActive>
                <label>Buyers name missing</label>
            </value>
            <value>
                <fullName>Clear Open Transactions</fullName>
                <isActive>false</isActive>
                <label>Clear Open Transactions</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>