force-app/main/default/objects/Case_Spam_Mapping__mdt/listViews/All_Case_Mappings.listView-meta.xml
<ListView>
    <fullName>All_Case_Mappings</fullName>
    <columns>MasterLabel</columns>
    <columns>Domain__c</columns>
    <columns>Keywords__c</columns>
    <columns>DeveloperName</columns>
    <columns>Status__c</columns>
    <columns>CaseType__c</columns>
    <columns>CaseSubType__c</columns>
    <columns>Closed_Reason__c</columns>
    <columns>Root_Cause__c</columns>
    <columns>Corrective_Action__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Case Mappings</label>
</ListView>